--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch
-transformers
-librosa
-requests
-bitsandbytes
+torch>=2.2.2
+transformers>=4.39.3
+bitsandbytes>=0.42.0
+librosa>=0.10.0
+requests>=2.26.0
